phone fixes alignment

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@media (max-width: 600px){
+
     .skills h2{
-        justify-self: center;
+        text-align: center;
     }
-}
+
 h2{
     color: rgb(255, 255, 255);
     font-size: 32px;
